// Copyright 2023 The Cross-Media Measurement Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package wfa.measurement.reporting.v2alpha;

import "google/api/client.proto";
import "google/api/field_behavior.proto";
import "google/api/annotations.proto";
import "google/api/resource.proto";
import "wfa/measurement/reporting/v2alpha/report_schedule.proto";

option java_package = "org.wfanet.measurement.reporting.v2alpha";
option java_multiple_files = true;
option java_outer_classname = "ReportSchedulesServiceProto";

// Service for interacting with `ReportSchedule` resources.
service ReportSchedules {
  // Creates a `ReportSchedule`.
  rpc CreateReportSchedule(CreateReportScheduleRequest)
      returns (ReportSchedule) {
    option (google.api.http) = {
      post: "/v2alpha/{parent=measurementConsumers/*}/reportSchedules"
      body: "report_schedule"
    };
    option (google.api.method_signature) = "parent,report_schedule";
  }

  // Returns the `ReportSchedule` with the specified resource key.
  rpc GetReportSchedule(GetReportScheduleRequest) returns (ReportSchedule) {
    option (google.api.http) = {
      get: "/v2alpha/{name=measurementConsumers/*/reportSchedules/*}"
    };
    option (google.api.method_signature) = "name";
  }

  // Lists `ReportSchedule`s.
  rpc ListReportSchedules(ListReportSchedulesRequest)
      returns (ListReportSchedulesResponse) {
    option (google.api.http) = {
      get: "/v2alpha/{parent=measurementConsumers/*}/reportSchedules"
    };
    option (google.api.method_signature) = "parent";
  }

  // Sets the `state` of a `ReportSchedule` to `STOPPED`.
  rpc StopReportSchedule(StopReportScheduleRequest) returns (ReportSchedule) {
    option (google.api.http) = {
      post: "/v2alpha/{name=measurementConsumers/*/reportSchedules/*}"
    };
    option (google.api.method_signature) = "name";
  }
}

message CreateReportScheduleRequest {
  // The parent resource where this `ReportSchedule` will be created.
  // Format: measurementConsumers/{measurement_consumer}
  string parent = 1 [
    (google.api.field_behavior) = REQUIRED,
    (google.api.resource_reference) = {
      child_type: "reporting.halo-cmm.org/ReportSchedule"
    }
  ];

  // The ID to use for the `ReportSchedule`, which will become the final
  // component of the `ReportSchedule's resource name.
  //
  // This must conform to RFC 1034, with the additional restriction that all
  // letters must be lower-case.
  string report_schedule_id = 2 [(google.api.field_behavior) = REQUIRED];

  // The `ReportSchedule` to create.
  ReportSchedule report_schedule = 3 [(google.api.field_behavior) = REQUIRED];

  // A unique identifier for this request. Restricted to 36 characters in the
  // set [a-zA-Z0-9]. A random UUID is recommended.
  // This request is only idempotent if a `request_id` is provided.
  string request_id = 4;
}

message GetReportScheduleRequest {
  // The name of the `ReportSchedule` to retrieve.
  // Format:
  // measurementConsumers/{measurement_consumer}/reportSchedules/{report_schedule}
  string name = 1 [
    (google.api.field_behavior) = REQUIRED,
    (google.api.resource_reference) = {
      type: "reporting.halo-cmm.org/ReportSchedule"
    }
  ];
}

message ListReportSchedulesRequest {
  // Resource name of the parent `MeasurementConsumer`.
  string parent = 1 [(google.api.resource_reference).type =
                         "halo.wfanet.org/MeasurementConsumer"];

  // The maximum number of `ReportSchedule`s to return. The service
  // may return fewer than this value. If unspecified, at most 10
  // `ReportSchedule`s will be returned. The maximum value is 100;
  // values above 100 will be coerced to 100.
  int32 page_size = 2;

  // A token from a previous call, specified to retrieve the next page. See
  // https://aip.dev/158.
  string page_token = 3;

  // Result filter. Raw CEL expression that is applied.
  string filter = 4;
}

message ListReportSchedulesResponse {
  // The `ReportSchedule` resources.
  repeated ReportSchedule report_schedules = 1;

  // A token that can be specified in a subsequent call to retrieve the next
  // page. See https://aip.dev/158.
  string next_page_token = 2;
}

message StopReportScheduleRequest {
  // The name of the `ReportSchedule` to stop.
  // Format:
  // measurementConsumers/{measurement_consumer}/reportSchedules/{report_schedule}
  string name = 1 [
    (google.api.field_behavior) = REQUIRED,
    (google.api.resource_reference) = {
      type: "reporting.halo-cmm.org/ReportSchedule"
    }
  ];
}
